plugins {
    id 'application'
}

def inc(module) {
    apply from: "${projectDir}/gradle/${module}.gradle"
}

inc('version')

group = 'nu.mine.mosher'

java {
    sourceCompatibility = JavaVersion.VERSION_15
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '--enable-preview'
}

inc('dependencies')

application {
    mainClass.set 'nu.mine.mosher.DelawareBayLights'
    applicationDefaultJvmArgs << '--enable-preview'
}
